--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
     <meta http-equiv="refresh" content="0; url=https://youtube.com/@opeyemitechpro" />
   </head>
   <body>
-    <p>
-      <h1>
-        Redirecting to <a href="https://youtube.com/@opeyemitechpro" target="_blank">Opeyemi Tech Pro YouTube Channel ...</a>
-      </h1>
+    <p>Redirecting to <a href="https://youtube.com/@opeyemitechpro" target="_blank">Opeyemi Tech Pro YouTube Channel ...</a>
       </p>
 
        <p>
          Please wait ...
        </p>
-
-<p>If this page does not redirect within 5 seconds, please click the link above.</p>
   </body>
 </html>
